# C-Bird

./: .gitignore  CMakeLists.txt  README.md  convert_traces.py  diagnostics_utf8.txt  final_fix_trace_utf8.txt  final_trace_utf8.txt  fixed_trace_utf8.txt  physics_trace_utf8.txt  raw_trace_utf8.txt
assets/levels/: level1.json  level10.json  level11.json  level12.json  level13.json  level14.json  level15.json  level16.json  level17.json  level18.json  level19.json  level2.json  level20.json  level21.json  level22.json  level23.json  level24.json  level25.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9.json
bird-release/assets/: custom_level.json  level1.json  progress.json
bird-release/assets/levels/: level11.json  level12.json  level14.json  level16.json  level17.json  level18.json  level21.json  level24.json  level3.json  level5.json  level9.json
src/: editor.c  editor.h  entities.c  entities.h  level.c  level.h  main.c  physics.c  physics.h  slingshot.c  slingshot.h  ui.c  ui.h
